--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ h3 {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 12px;
 }
 
 button {
